; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_alpha-nat.c_register_addr.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_alpha-nat.c_register_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PC_REGNUM = common dso_local global i32 0, align 4
@PC = common dso_local global i64 0, align 8
@ALPHA_UNIQUE_REGNUM = common dso_local global i32 0, align 4
@ALPHA_UNIQUE_PTRACE_ADDR = common dso_local global i64 0, align 8
@FP0_REGNUM = common dso_local global i32 0, align 4
@GPR_BASE = common dso_local global i64 0, align 8
@FPR_BASE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @register_addr(i32 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @PC_REGNUM, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i64, i64* @PC, align 8
  store i64 %10, i64* %3, align 8
  br label %34

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @ALPHA_UNIQUE_REGNUM, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %11
  %16 = load i64, i64* @ALPHA_UNIQUE_PTRACE_ADDR, align 8
  store i64 %16, i64* %3, align 8
  br label %34

17:                                               ; preds = %11
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* @FP0_REGNUM, align 4
  %20 = icmp slt i32 %18, %19
  br i1 %20, label %21, label %26

21:                                               ; preds = %17
  %22 = load i64, i64* @GPR_BASE, align 8
  %23 = load i32, i32* %4, align 4
  %24 = sext i32 %23 to i64
  %25 = add nsw i64 %22, %24
  store i64 %25, i64* %3, align 8
  br label %34

26:                                               ; preds = %17
  %27 = load i64, i64* @FPR_BASE, align 8
  %28 = load i32, i32* %4, align 4
  %29 = sext i32 %28 to i64
  %30 = add nsw i64 %27, %29
  %31 = load i32, i32* @FP0_REGNUM, align 4
  %32 = sext i32 %31 to i64
  %33 = sub nsw i64 %30, %32
  store i64 %33, i64* %3, align 8
  br label %34

34:                                               ; preds = %26, %21, %15, %9
  %35 = load i64, i64* %3, align 8
  ret i64 %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
